@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009 Brian Pellin.
+ Copyright 2009-2012 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -57,8 +57,8 @@
 	  android:layout_width="fill_parent"
 	  android:layout_height="wrap_content" 
 	  android:layout_below="@id/password_label"
-	  android:password="true"
 	  android:singleLine="true"
+	  android:inputType="textPassword"
 	  android:hint="@string/hint_login_pass"/>
 	<ImageButton android:id="@+id/browse_button"
 	  android:layout_width="wrap_content"
