@@ -1,3 +1,5 @@
+ * Add input types to entry fields
+
 KeePassDroid (1.9.17)
  * Updated Russian translations from I Nedoboy
  * New Spanish translations from jipanos
